[project]
name = "ragtest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "groq>=0.25.0",
    "langchain>=0.3.25",
    "openai>=1.82.0",
    "streamlit>=1.45.1",
]
